[package]
name = "elm-torture"
version = "0.1.0"
authors = ["Harry Sarson <harry.sarson@hotmail.co.uk>"]
edition = "2018"

[dependencies]
anyhow = "1.0.55"
apply = "0.3"
bstr = "0.2"
clap = "3.1.12"
colored = "2.0"
crossbeam = "0.8.1"
env_logger = "0.9"
futures = "0.3.18"
humantime = "2.0.1"
humantime-serde = "1.0.0"
indented = "0.1.0"
lazy_static = "1.4"
log = "0.4"
once_cell = "1.9"
pathdiff = "0.2.1"
rayon = "1.5"
rust-embed = "6.3.0"
same-file = "1.0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["full"] }
wait-timeout = "0.2.0"
warp = { version = "0.3.2", features = ["tls"] }
which = "4.2"
itertools = "0.10.3"
json_comments = "0.2.0"

